--- a/package.json
+++ b/package.json
@@ -253,7 +253,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "webpack && node purgecss.js",
     "dev": "webpack serve --mode development"
   },
   "keywords": [],
